# 2m-AutoFlow

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
anchors/: anchors.py
calib/: calibrator.py
conf/: config.yaml  env.py  log.py
core/: capture.py  input.py  ocr.py  ocr_doctr.py  vision.py
docs/: flows.md
docs/superpowers/plans/: 2026-07-11-game-auto-engine.md
docs/superpowers/specs/: 2026-07-11-game-auto-engine-design.md
flows/: base-bak.py  base.py  identify.py  smoke.py  supply.py
fsm/: context.py  engine.py  registry.py  state.py
images/: regions.yaml
images/base/: death-2026-07-24.json  regions.yaml
images/supply/: regions.yaml
runner/: runner.py
tests/: test_anchors.py  test_calibrator.py  test_context.py  test_engine.py  test_registry.py  test_runner.py  test_state.py  test_target.py  test_vision.py
tools/: capture_anchor.py  whereami.py
