[project]
name = "game-auto"
version = "0.1.0"
description = "分辨率无关、可自愈的视觉自动化引擎（锚点相对定位 + 声明式状态机）"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow",
    "easyocr",
    "pyautogui",
    "pynput",
    "opencv-python-headless",
    "ruamel.yaml",
    "numpy",
]

# 可选：pyobjc（Quartz）用于 macOS 自动化后强制显示光标；
# 通常已被 pyautogui 间接引入，缺失时 core/input 会自动降级，无需显式安装。

[dependency-groups]
# 开发依赖（uv sync 默认包含；生产可用 uv sync --no-dev 排除）
dev = [
    "pytest",
]

[tool.uv]
# 本项目是应用而非可分发库：扁平布局、从项目根直接 import，
# 不需要构建/安装自身，设为非打包项目。
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
